--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<li><a href="tiger/index.html">老虎证券</a></li>
 		<li><a href="liebao/index.html">猎豹</a></li>
 		<li><a href="qy/index.html">穷游网</a></li>
-		<li><a href="xinhua/www/index.html"></a></li>
+		<li><a href="xinhua/www/index.html">新华保险</a></li>
 		<!-- <li><a href="qmgj/public/static/app/view/homeView.html">全民共进</a></
 		li> -->
 	</ol>
