--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 </head>
 <body>
 	<ol>
-		<li><a href="olderdoctor/index.html">老中医</a></li>
-		<li><a href="qy/index.html">穷游网</a></li>
-		<li><a href="xinhua/www/index.html">新华保险</a></li>
+		<!-- <li><a href="qy/index.html">旅游行</a></li> -->
+		<!-- <li><a href="olderdoctor/index.html">老中医</a></li> -->
+		<!-- <li><a href="xinhua/www/index.html">新华保险</a></li> -->
 	</ol>
+	<script>
+		location.href = 'xinhua/www/index.html';
+	</script>
 </body>
 </html>
