--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<!-- <li><a href="xinhua/www/index.html">新华保险</a></li> -->
 	</ol>
 	<script>
-		location.href = 'xinhua/www/index.html';
+		//location.href = 'xinhua/www/index.html';
+		location.href = 'photo/index.html'
 	</script>
 </body>
 </html>
