--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</ol>
 	<script>
 		//location.href = 'xinhua/www/index.html';
-		location.href = 'photo/index.html'
+		location.href = 'photo/login.html'
 	</script>
 </body>
 </html>
