--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 </head>
 <body>
 	<ol>
-		<!-- <li><a href="qy/index.html">旅游行</a></li> -->
-		<!-- <li><a href="olderdoctor/index.html">老中医</a></li> -->
-		<!-- <li><a href="xinhua/www/index.html">新华保险</a></li> -->
+		<li><a href="qy/index.html">旅游行</a></li> 
+		<li><a href="olderdoctor/index.html">老中医</a></li> 
+		<li><a href="xinhua/www/index.html">新华保险</a></li> 
+		<li><a href="photo/login.html">照片墙</a></li>
 	</ol>
 	<script>
 		//location.href = 'xinhua/www/index.html';
-		location.href = 'photo/login.html'
+		//location.href = 'photo/login.html'
 	</script>
 </body>
 </html>
