--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		<li><a href="olderdoctor/index.html">老中医</a></li> 
 		<li><a href="xinhua/www/index.html">新华保险</a></li> 
 		<li><a href="photo/login.html">照片墙</a></li>
+		<li><a href="idCard/index.html">身份证验证</a></li> 
+		<li><a href="mobile/index.html">作业管理</a></li> 
+		<li><a href="tiger/index.html">老虎证券</a></li> 
+
 	</ol>
 	<script>
 		//location.href = 'xinhua/www/index.html';
