--- a/idCard/index.html
+++ b/idCard/index.html
@@ -6,37 +6,84 @@
 	<title>身份证处理</title>
 	<link rel="stylesheet" href="css/init.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script src='bower_components/jquery/dist/jquery.min.js'></script>
-	<script src='js/index.js'></script>
+	
 </head>
 <body class="clearfix">
 	<div id="queryIdCard">
 		<h3>查询身份证</h3>
-		<label>请输入身份证号：<input type="text" class="inputVal" name="" value="" placeholder="请输入身份证号"></label>
-		<button>查询</button>
+		<label>请输入身份证号：<input type="number" id="inputVal" name="" value="" placeholder="请输入身份证号"></label>
+		<button id="query">查询</button>
 		<div class="errorTip">
 			
 		</div>
 		<div class="showResult">
-			<label>地址：<input type="text" class="address" name="" value=""></label><br>
-			<label>年龄：<input type="text" class="age" name="" value=""></label><br>
-			<label>生日：<input type="text" class="birthday" name="" value=""></label><br>
-			<label>性别：<input type="text" class="gender" name="" value=""></label>
+			<label>地址：<input type="text" id="area" name="" value=""></label><br>
+			<label>年龄：<input type="text" id="age" name="" value=""></label><br>
+			<label>生日：<input type="text" id="birthday" name="" value=""></label><br>
+			<label>性别：<input type="text" id="gender" name="" value=""></label>
 		</div>
 	</div>
 	<div id="getIdCard">
 		<h3>生成身份证</h3>
-		<select name="" class="province">
-			<option value="">请选择省份</option>
-		</select>
-		<select name="" class="city">
-			<option value="">请选择城市</option>
-		</select>
-		<select name="" class="area">
-			<option value="">请选择区域</option>}
-		</select>
-		<label>请输入生日：<input type="text" name="" value=""></label>
-		<label>请输入性别：<input type="text" name="" value=""></label>
+		<div  class="province">
+			<span>省份：</span>
+			<select name="" id="province">
+				<option value="">请选择省份</option>
+			</select>
+		</div>
+		<div class="city">
+			<span>市：</span>
+			<select name="" id='city'>
+				<option value="">请选择城市</option>
+			</select>
+		</div>
+		<div class="area">
+			<span>区：</span>
+			<select name="" id='_area'>
+				<option value="">请选择区域</option>
+			</select>
+		</div>
+		<div>
+			<span>性别：</span>
+			<label>男<input type="radio" name="gender" value="1"></label>
+			<label>女<input type="radio" name="gender" value="0"></label>
+		</div>
+
+		<div  class="_date">
+			<span>出生年月：</span>
+			<select name="" id="year">
+				<option value="">请选择出生年月：</option>
+			</select>
+		</div>
+		<div class="_date">
+			<span>出生月份：</span>
+			<select name="" id='month'>
+				<option value="">请选择出生月份：</option>
+			</select>
+		</div>
+		<div class="_date">
+			<span>出生日期：</span>
+			<select name="" id='day'>
+				<option value="">请选择出生日期：</option>
+			</select>
+		</div>
+
+		<!-- <div>
+			<label>请选择出生年月：<input type="text" name="" value="" id="year">（1800至今）</label>
+			<label>请选择出生月份：<input type="text" name="" value="" id="month">（1~12月）</label>
+			<label>请选择出生日期：<input type="text" name="" value="" id="day"></label>
+		</div> -->
+		
+		<div class="subBtn">
+			<button type="button">生&nbsp;成</button>
+		</div>
+
+		<div>
+			<input type="text"  id="result">
+		</div>
 	</div>
+	<script src='bower_components/jquery/dist/jquery.min.js'></script>
+	<script src='js/index.js'></script>
+	<script src='js/setIdCard.js'></script>
 </body>
 </html>
