--- a/idCard/index.html
+++ b/idCard/index.html
@@ -45,7 +45,7 @@
 		</div>
 		<div>
 			<span>性别：</span>
-			<label>男<input type="radio" name="gender" value="1"></label>
+			<label>男<input type="radio" name="gender" checked="" value="1"></label>
 			<label>女<input type="radio" name="gender" value="0"></label>
 		</div>
 
@@ -80,6 +80,7 @@
 
 		<div>
 			<input type="text"  id="result">
+			<input type="text"  id="length">
 		</div>
 	</div>
 	<script src='bower_components/jquery/dist/jquery.min.js'></script>
