--- a/idCard/index.html
+++ b/idCard/index.html
@@ -11,7 +11,7 @@
 <body class="clearfix">
 	<div id="queryIdCard">
 		<h3>查询身份证</h3>
-		<label>请输入身份证号：<input type="number" id="inputVal" name="" value="" placeholder="请输入身份证号"></label>
+		<label>请输入身份证号：<input type="text" id="inputVal" name="" value="" placeholder="请输入身份证号"></label>
 		<button id="query">查询</button>
 		<div class="errorTip">
 			
