--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li><a href="xinhua/www/index.html">新华保险</a></li> 
 		<li><a href="photo/login.html">照片墙</a></li>
 		<li><a href="idCard/index.html">身份证验证</a></li> 
-		<li><a href="mobile/index.html">作业管理</a></li> 
+		<!-- <li><a href="mobile/index.html">作业管理</a></li>  -->
 		<li><a href="tiger/index.html">老虎证券</a></li> 
 
 	</ol>
